packages/jaeger-ui/src/components/common/CopyIcon.css
/*
Copyright (c) 2019 Uber Technologies, Inc.
SPDX-License-Identifier: Apache-2.0
*/

.CopyIcon,
.CopyIcon:hover,
.CopyIcon:active {
  background-color: transparent;
  border: none;
  box-shadow: none;
  color: inherit;
  height: auto;
  overflow: visible;
  padding: 1px;
  font-size: 13px;
  margin-left: 5px;
  line-height: 1;
  transform: none;
  transition: none;
}

.CopyIcon:focus-visible {
  outline: 2px solid currentColor;
  outline-offset: 2px;
}

